syntax = "proto3";

package db_serialization;

message Edge {
    uint64 from = 1;
    uint64 to = 2;
    double weight = 3;
}

message IncidenceList {
    repeated uint64 edge_id = 1;
}


message Graph {
    repeated Edge edges = 1;
    repeated IncidenceList incidence_lists = 2;
}

